Fix alignment i lenkepaneler

--- a/src/components/_common/lenkepanel/LenkepanelNavNo.less
+++ b/src/components/_common/lenkepanel/LenkepanelNavNo.less
@@ -22,8 +22,6 @@
         display: flex;
         flex-direction: column;
         flex-basis: 100%;
-        height: 100%;
-        width: 100%;
     }
 
     &__ikon {
